--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1><strong>Odin Recipes</strong></h1>
-    <p>This is will be the first paragraph</p>
+    <h2>Lasagne</h2>
+      <a href="./recipes/lasagna.html"
 </body>
 </html>
