update html for index link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1><strong>Odin Recipes</strong></h1>
     <h2>Lasagne</h2>
-      <a href="./recipes/lasagna.html"
+      <a href="./recipes/lasagna.html">Lasagne!</a>
 </body>
 </html>
