Add Img, Ingredients, and Steps to lasagna.html. Fix lasagna spelling errors in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><strong>Odin Recipes</strong></h1>
-    <h2>Lasagne</h2>
-      <a href="./recipes/lasagna.html">Lasagne!</a>
+    <h2>lasagna</h2>
+      <a href="./recipes/lasagna.html">Lasagna!</a>
 </body>
 </html>
