--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1><strong>Odin Recipes</strong></h1>
-    <h2>lasagna</h2>
+      <ul>
+        <h2>Lasagna</h2>
       <a href="./recipes/lasagna.html">Lasagna!</a>
+    <h2><strong>Pizza</strong></h2>
+      <a href="./recipes/pizza.html">Hawaiian Pizza</a>
+      </ul>
 </body>
 </html>
