Add instructions and steps headings and paragraphs to Pizza.html

--- a/recipes/Pizza.html
+++ b/recipes/Pizza.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0058)file:///home/top/top_repos/odin-recipes/recipes/pizza.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
 </head>
 <body>
     <h1><em>Hawaiian Pizza!</em></h1>
-      <img src="./It-doesnt-get-much-better-than-Homemade-Hawaiian-Pizza.-Tropical-paradise-for-dinner-2.jpg">
+      <img src="./Pizza_files/It-doesnt-get-much-better-than-Homemade-Hawaiian-Pizza.-Tropical-paradise-for-dinner-2.jpg">
       <h2>The Pizza My Wife Loves to Hate</h2>
         <p>My wife believes pineapple on pizza is a crime against humanity. 
             The recipe proves just how wrong she is (about this at least)!
@@ -32,5 +32,5 @@
               <li>Make my wife cry tears of joy with how delicious this pizza is.</li>
           </ol>
 
-</body>
-</html>
+
+</body></html>
