--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -53,8 +53,7 @@
             <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.</li>
           </ol>   
 
-
-
+    <h6><a href="../index.html">Return to Homepage</a></h6>      
 
 </body>
 </html>
