Add Crazy Chef img ref to index.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><em>Hawaiian Pizza!</em></h1>
-      <img src="./It-doesnt-get-much-better-than-Homemade-Hawaiian-Pizza.-Tropical-paradise-for-dinner-2.jpg">
+      <img src="./It-doesnt-get-much-better-than-Homemade-Hawaiian-Pizza.-Tropical-paradise-for-dinner-2.jpg" alt="Best pizza in the world: Hawaiian">
       <h2>The Pizza My Wife Loves to Hate</h2>
         <p>My wife believes pineapple on pizza is a crime against humanity. 
             The recipe proves just how wrong she is (about this at least)!
