--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1><strong>Odin Recipes</strong></h1>
+    <img src="https://media.istockphoto.com/photos/great-idea-picture-id1179598519?k=20&m=1179598519&s=612x612&w=0&h=YoBfcd2jrDFESFHMc7EuNPHfPV0pfu1jOdahoe_xzXU=" ref="Crazy chef">
       <ul>
         <h2>Lasagna</h2>
-      <a href="./recipes/lasagna.html">Lasagna!</a>
+      <a href="./recipes/lasagna.html">Lasagna</a>
     <h2><strong>Pizza</strong></h2>
       <a href="./recipes/pizza.html">Hawaiian Pizza</a>
       </ul>
